# Aegis-Guard

./: CONTRIBUTING.md  README.md  aegis_guard.py  build_aegis.py  logs.db  pyproject.toml  requirements.txt
.github/workflows/: apisec-scan.yml  bandit.yml  black-duck-security-scan-ci.yml  codeql.yml  main.yml  summary.yml
.github/workflows/.github/workflows/: ci.yml
Aegis-Guard/: aegis_guard.py  app.yml  main_window.py
GitHub Actions Workflow (.github/workflows/: app.yml  app.yml)
GitHub Actions Workflow (.github/workflows/GitHub Actions Workflow (.github/workflows/: app.yml)
assets/: logo.png)
core/: ai_core.py  logger.py  optimus_hybrid.py  security_core.py
github/workflows/: ci.yml
modules/: ai_core.py  logger.py  optimus.py  system_service.py
tests/: _test.py  test_aegis_basic.py  test_basic.py
